unpackaged/main/default/objects/project_cloud__Stage_Gate_Process_Step__c/project_cloud__Stage_Gate_Process_Step__c.object-meta.xml
<CustomObject>
    <label>Stage Gate Process Step</label>
    <nameField>
        <label>Stage Gate Process Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage Gate Process Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>