unpackaged/main/default/objects/project_cloud__Stage_Gate_Process_Step__c/fields/project_cloud__Archive_Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Archive_Date__c</fullName>
    <description>The date of when the step was set to be archived</description>
    <label>Archive Date</label>
    <type>Date</type>
</CustomField>