unpackaged/main/default/objects/project_cloud__Stage_Gate_Process_Step__c/fields/project_cloud__Stage_Gate_Process__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Stage_Gate_Process__c</fullName>
    <label>Stage Gate Process</label>
    <referenceTo>project_cloud__Stage_Gate_Process__c</referenceTo>
    <relationshipLabel>Stage Gate Process Steps</relationshipLabel>
    <relationshipName>Stage_Gate_Process_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>