unpackaged/main/default/objects/project_cloud__Stage_Gate_Process_Step__c/fields/project_cloud__Status__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>project_cloud__Process_Step_Status</valueSetName>
    </valueSet>
</CustomField>