unpackaged/main/default/objects/project_cloud__Stage_Gate_Process_Step__c/fields/project_cloud__Total_Checklist_Items__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Total_Checklist_Items__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Checklist Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>